--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,6 @@ h2 {
 
 @media only screen and (max-width: 920px) {
     .main-container {
-        /* background: #00cc777d; */
         height: auto;
         margin-top: 30px;
     }
@@ -92,7 +91,7 @@ h2 {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: auto;
+        height: 130px;
         padding: 20px;
     }
     .searchbar {
