--- a/src/components/Searchbar/Searchbar.css
+++ b/src/components/Searchbar/Searchbar.css
@@ -35,3 +35,9 @@
         width: 90vw;
         height: 90vh;
     }
+    @media only screen and (max-width: 600px) {
+        .searchbar {
+            justify-content: center;
+            margin-top: 20px;
+        }
+    }
