--- a/src/App.css
+++ b/src/App.css
@@ -87,3 +87,14 @@ h2 {
         transform: translateX(-50%);
     }
 }
+
+.info {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+a{
+    text-decoration: none;
+    color: #23B791;
+}
